<resources>
    <string name="app_name">Photofy</string>
    <string name="preview_area">preview area</string>
    <string name="captured_image">captured image</string>
    <string name="login_toast">Successfully logged in!</string>
    <string name="logout_toast">Successfully logged out!</string>
    <string name="logout_error_toast">Issue with log out</string>
    <string name="login">Log in</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="open_camera">Open camera</string>
    <string name="capture_image_button">capture image button</string>
    <string name="signup">Sign up</string>
    <string name="new_account">Don\'t have an account?</string>
    <string name="photofy">Photofy</string>
    <string name="upload_image">Upload image</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="leave_a_comment_here">Leave a comment here</string>
    <string name="cancel">Cancel</string>
    <string name="remove_current_photo">Remove current photo</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_from_library">Choose from library</string>
    <string name="follow">Follow</string>
    <string name="likes">Likes</string>
    <string name="posts">Posts</string>
    <string name="user_stats">User Stats:</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="continuebtn">Continue</string>
    <string name="get_started">Get Started</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="have_an_account">Have an Account?</string>
    <string name="create_subtitle">Create account and choose your preferred music genres</string>
    <string name="generate_me_songs">Generate me songs!</string>
    <string name="search">Search</string>
</resources>